name:                marksvg
version:             0.1.0.0
synopsis:            Markdown to SVG
description:         Please see README.md
homepage:            https://github.com/raviqqe/marksvg
license:             BSD3
license-file:        LICENSE
author:              Me
maintainer:          raviqqe@gmail.com
copyright:           2016 Me
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable marksvg
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
                       -fno-warn-name-shadowing
                       -fno-warn-type-defaults
  build-depends:       base, cmark, blaze-svg, blaze-markup, text, mtl, split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/raviqqe/marksvg
